--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,7 +10,7 @@
             <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">My Profile</a>
+            <a href="{% url 'profile' %}"class="nav-link active" aria-current="page" href="/">My Profile</a>
           </li>
           {% if user.is_authenticated %}
             <li class="nav-item">
