--- a/static/base.css
+++ b/static/base.css
@@ -1,4 +1,10 @@
-img {
+.img-size img {
+    width: 30px;
+    height: 30px;
+}
+
+
+img{
     max-width: 400px;
     max-height: 400px;
 }
@@ -14,4 +20,14 @@ img {
 
 #overview {
     padding-top:50px;
+}
+
+.poster-container form,
+.poster-container form div {
+    display: inline;
+}
+
+.poster-container button {
+    display: inline;
+    vertical-align: middle;
 }
