--- a/userprofiles/templates/userprofiles/profile_overview.html
+++ b/userprofiles/templates/userprofiles/profile_overview.html
@@ -1,5 +1,24 @@
-{% comment %} {% extends 'base.html' %} {% endcomment %}
+{% extends 'base.html' %}
 
-{% for movie in movies%}
-{{movie.movie_id}}
-{% endfor %}
+{% block title%}My Profile{% endblock %}
+
+{% block content %}
+
+<div class="container text-center">
+    <div class="row">
+        <div class="col">
+            <h1>Column 1</h1>
+        </div>
+        <div class="col-8">
+            <h1>User profile</h1>
+            <a href="{% url 'seen-movies' %}"><button type="button"  class="btn btn-primary btn-lg">Seen movie list</button></a>
+            <a href="{% url 'saved-movies' %}"><button type="button" class="btn btn-primary btn-lg">Watch later list</button></a>
+        </div>
+        <div class="col">
+            <h1>Column 3</h1>
+
+        </div>
+    </div>
+</div>
+
+{% endblock %}
