--- a/userprofiles/templates/userprofiles/profile_saved_movies.html
+++ b/userprofiles/templates/userprofiles/profile_saved_movies.html
@@ -3,14 +3,18 @@
 
 {% block content %}
 <div class="poster-container text-center ">
-    <h1>Movies you plan to watch later</h1>
- {% for movie in movies %}
-    <form  action="{% url 'homepage' %}" method="POST">
-        {% csrf_token %}
-        <input type="hidden" name="movie" value={{movie.title}}>
-        <input class="img-size" type="image" src={{movie.poster}} width="300" height="500">
-    </form>
-{% endfor %}
+    {% if movies %}
+        <h1>Movies you plan to watch later</h1>
+        {% for movie in movies %}
+        <form action="{% url 'movie-detail' %}" method="POST">
+            {% csrf_token %}
+            <input type="hidden" name="movie_id" value={{movie.id}}>
+            <input class="img-size" type="image" src={{movie.poster}} width="300" height="500">
+        </form>
+        {% endfor %}
+    {% else %}
+    <h1>You haven't saved any movies yet.</h1>
+    {% endif %}
 
 
 {% endblock %}
