--- a/userprofiles/templates/userprofiles/profile_seen_movies.html
+++ b/userprofiles/templates/userprofiles/profile_seen_movies.html
@@ -3,15 +3,19 @@
 
 {% block content %}
 <div class="poster-container text-center ">
+    {% if movies %}
     <h1>Movies you have seen so far</h1>
- {% for movie in movies %}
-    <form  action="{% url 'homepage' %}" method="POST">
-        {% csrf_token %}
-        <input type="hidden" name="movie" value={{movie.title}}>
-        <input class="img-size" type="image" src={{movie.poster}} width="300" height="500">
-    </form>
-{% endfor %}
 
+        {% for movie in movies %}
+            <form action="{% url 'movie-detail' %}" method="POST">
+                {% csrf_token %}
+                <input type="hidden" name="movie_id" value={{movie.id}}>
+                <input class="img-size" type="image" src={{movie.poster}} width="300" height="500">
+            </form>
+        {% endfor %}
+    {% else %}
+    <h1> You haven't seen any movies yet. </h1>
+    {% endif %}
 
 </div>
 {% endblock %}
