--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -24,6 +24,12 @@
               <a class="nav-link active" aria-current="page" href="{% url 'register' %}">Register</a>
             </li>
           {% endif %}
+          <li class="nav-item">
+            <a href="{% url 'profile' %}"class="nav-link active" aria-current="page" href="/">Upcoming</a>
+          </li>
+          <li class="nav-item">
+            <a href="{% url 'profile' %}"class="nav-link active" aria-current="page" href="/">Popular</a>
+          </li>
         </ul>
         
       </div>
