--- a/userprofiles/templates/userprofiles/profile_overview.html
+++ b/userprofiles/templates/userprofiles/profile_overview.html
@@ -10,13 +10,15 @@
             <h1>Column 1</h1>
         </div>
         <div class="col-8">
-            <h1>User profile</h1>
+            <h1>{{user|capfirst}} Profile</h1>
+            <img class="rounded-circle account-img" src="{{ user.profile.avatar.url }}"><br>
+            <h3>Bio:</h3>
+            <p>{{user.profile.bio}}</p>
             <a href="{% url 'seen-movies' %}"><button type="button"  class="btn btn-primary btn-lg">Seen movie list</button></a>
             <a href="{% url 'saved-movies' %}"><button type="button" class="btn btn-primary btn-lg">Watch later list</button></a>
         </div>
         <div class="col">
             <h1>Column 3</h1>
-
         </div>
     </div>
 </div>
