--- a/userprofiles/templates/userprofiles/profile_edit.html
+++ b/userprofiles/templates/userprofiles/profile_edit.html
@@ -10,12 +10,12 @@
     <div class="col-6 container py-5">
         <h1>Profile Details</h1>
         <img class="rounded-circle account-img" src="{{ user.profile.avatar.url }}"><br>
-        <form method="POST">
-        {% csrf_token %}    
-        {{profile_form|crispy}}
-        <h1>Account Details</h1>
-        {{user_form|crispy}}
-        <button type="submit"  class="btn btn-primary btn-lg">Save</button>
+        <form method="POST" enctype="multipart/form-data">
+            {% csrf_token %}    
+            {{profile_form|crispy}}
+            <h1>Account Details</h1>
+            {{user_form|crispy}}<br>
+            <button type="submit"  class="btn btn-primary btn-lg">Save</button>
         </form>
     </div>
 </div>
