--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -25,10 +25,13 @@
             </li>
           {% endif %}
           <li class="nav-item">
-            <a href=""class="nav-link active" aria-current="page" href="/">Upcoming</a>
+            <a href="{% url "movies-section" "upcoming" %}" class="nav-link active" aria-current="page" href="/">Upcoming</a>
           </li>
           <li class="nav-item">
-            <a href=""class="nav-link active" aria-current="page" href="/">Popular</a>
+            <a href="{% url "movies-section" "popular" %}" class="nav-link active" aria-current="page" href="/">Popular</a>
+          </li>
+          <li class="nav-item">
+            <a href="{% url "movies-section" "top_rated" %}" class="nav-link active" aria-current="page" href="/">Top Rated</a>
           </li>
         </ul>
         
