--- a/userprofiles/templates/userprofiles/register.html
+++ b/userprofiles/templates/userprofiles/register.html
@@ -6,14 +6,14 @@
 
 {% load crispy_forms_tags %}
 
-<div class="container py-5">
+<div class="container py-5 text-center">
 	<h1>Register</h1>
 	<form method="POST">
 		{% csrf_token %}
 		{{ register_form|crispy}}                    
 		<button class="btn btn-primary" type="submit">Register</button>
 	</form>
-	<p class="text-center">If you already have an account, <a href="/login">login</a> instead.</p>
+	<p>If you already have an account, <a href="{% url "login" %}">login</a> instead.</p>
 </div>
 
 {% endblock %}
